<resources>
    <string name="app_name">mini_project</string>
    <string name="Name">Электронный журнал школы №228</string>
    <string name="Teachers">Список предподавателей</string>
    <string-array name="Students">
        <item> Агатьева Арина Юрьевна</item>
        <item> Алексеева Пальмира Гурьевна</item>
        <item> Алексеев Феликс Александрович</item>
        <item> Борисова Екатерина Юрьевна</item>
        <item> Васильев Иван Юрьевич</item>
        <item> Григорьева Елена Андреевна</item>
        <item> Данилов Александр Леонидович</item>
        <item> Жидова Анастасия Анатольевна</item>
        <item> Исаков Константин Сергеевич</item>
        <item> Иванов Иван Александрович</item>
        <item> Клементьева Екатерина Николаевна</item>
        <item> Николаева Анжелика Леонидовна</item>
        <item> Николаева Анна Игоревна</item>
        <item> Николаев Кирилл Андреевич</item>
        <item> Родионова Елена Васильевна</item>
        <item> Семёнова Анна Александровна</item>
        <item> Терентьев Юрий Александрович</item>
        <item> Фёдоров Владимир Николаевич</item>
        <item>Ананьева Татьяна Андреевна</item>
        <item> Андреев Савелий Павлович</item>
        <item> Антонов Павел Олегович</item>
        <item> Васильева Анастасия Юрьевна</item>
        <item> Данилова Дарья Владимировна</item>
        <item> Дмитриев Валерий Игоревич</item>
        <item> Егорова Лина Сергеевна</item>
        <item> Ермаков Даниил Владимирович</item>
        <item> Ефремов Эдуард Витальевич</item>
        <item> Зайнашев Леонид Васильевич</item>
        <item> Куприянов Артур Иванович</item>
        <item> Марков Сергей Владимирович</item>
        <item> Михайлов Валерий Андреевич</item>
        <item> Михайлова Ксения Сергеевна</item>
        <item> Никифоров Алексей Сергеевич</item>
        <item> Николаева Надежда Станиславовна</item>
        <item> Осипова Диана Сергеевна</item>
        <item> Петрова Екатерина Сергеевна</item>
        <item> Петрова Ольга Геннадьевна</item>
        <item> Чернова Мария Вадимовна</item>
        <item> Яковлев Дмитрий Андреевич</item>
        <item> Александров Алексей Львович</item>
        <item> Ананьев Дмитрий Александрович</item>
        <item> Андрейцева Анастасия Юрьевна</item>
        <item> Васильев Александр Сергеевич</item>
        <item> Васильев Владислав Владиленович</item>
        <item> Васильева Марина Александровна</item>
        <item> Васильева Наталия Николаевна</item>
        <item> Владимиров Алексей Сергеевич</item>
        <item> Гаврилова Ирина Валерьевна</item>
        <item> Данилова Мария Юрьевна</item>
        <item> Егоров Владислав Сергеевич</item>
        <item> Ершов Геннадий Константинович</item>
        <item> Иванов Геннадий Петрович</item>
        <item> Иванова Дарья Алексеевна</item>
        <item> Иванов Сергей Валерьевич</item>
        <item> Иванов Сергей Олегович</item>
        <item> Каткова Светлана Станиславовна</item>
        <item> Козлова Мария Ивановна</item>
        <item> Кошкин Илья Алексеевич</item>
        <item> Алексеева Ирина Андреевна</item>
        <item> Арсентьев Виктор Михайлович</item>
        <item> Васильев Александр Иванович</item>
        <item> Григорьев Анатолий Владимирович</item>
        <item> Дядькина Анастасия Сергеевна</item>
        <item> Жестянова Людмила Валентиновна</item>
        <item> Журавлева Маргарита Юрьевна</item>
        <item> Иванова Алина Валериевна</item>
        <item> Иванова Диана Олеговна</item>
        <item> Илларионов Сергей Родионович</item>
        <item> Казаков Максим Александрович</item>
        <item> Калинина Оксана Игоревна</item>
        <item> Львова Кристина Валерьевна</item>
        <item> Николаев Сергей Андреевич</item>
        <item> Павлова Кристина Александровна</item>
        <item> Петрова Кристина Алексеевна</item>
        <item> Потапова Анастасия Вячеславовна</item>
        <item> Александров Геннадий Витальевич</item>
        <item> Алексеев Алексей Андреевич</item>
        <item> Андреева Кристина Эдуардовна</item>
        <item> Белова Алиса Владиславна</item>
        <item> Васильева Анжелика Александровна</item>
        <item> Владимиров Александр Андреевич</item>
        <item> Ефремов Максим Александрович</item>
        <item> Гордеев Евгений Андреевич</item>
        <item> Максимов Александр Григорьевич</item>
        <item> Марков Андрей Владимирович</item>
        <item> Павлов Павел Витальевич</item>
        <item> Слесарев Виталий Алексеевич</item>
        <item> Федотова Мария Витальевна</item>
        <item> Афанасьев Евгений Витальевич</item>
        <item> Васильев Андрей Иванович</item>
        <item> Васильева Ксения Сергеевна</item>
        <item> Герасимова Юлия Ивановна</item>
        <item> Горшкова Елена Александровна</item>
        <item> Григорьев Денис Юрьевич</item>
        <item> Григорьева Евгения Сергеевна</item>
        <item> Данилова Валентина Юрьевна</item>
        <item> Данилова Оксана Анатольевна</item>
        <item> Иванов Григорий Георгиевич</item>
        <item> Максимова Ольга Сергеевна</item>
        <item> Моисеева Ксения Владимировна</item>
        <item> Никифорова Анастасия Леонидовна</item>
        <item> Николаева Александра Юрьевна</item>
        <item> Орлова Анна Александровна</item>
        <item> Петрова Анастасия Сергеевна</item>
        <item> Петрова Анна Сергеевна</item>
        <item> Алексеева Анна Владимировна</item>
        <item> Андреев Александр Андреевич</item>
        <item> Владимировна Валентина Сергеевна</item>
        <item> Гаврилов Иван Александрович</item>
        <item> Гаврилов Кирилл Валерьевич</item>
        <item> Еремеева Алена Владиславовна</item>
        <item> Ефремов Юрий Андреевич</item>
        <item> Захаров Евгений Валерьевич</item>
        <item> Иванов Виталий Владиславович</item>
        <item> Иванов Евгений Юрьевич</item>
        <item> Иванова Наталья Леонидовна</item>
        <item> Кириллов Виталий Эдуардович</item>
        <item> Леонтьева Ксения Леонтьевна</item>
        <item> Марков Сергей Александрович</item>
        <item> Николаева Оксана Юрьевна</item>
        <item> Павлов Артем Александрович</item>
        <item> Александрова Марина Ивановна</item>
        <item> Алексеев Александр Александрович</item>
        <item> Борисов Святослав Юрьевич</item>
        <item> Гурьев Павел Игоревич</item>
        <item> Данилов Александр Анатольевич</item>
        <item> Жидов Александр Анатольевич</item>
        <item> Жукова Анастасия Владимировна</item>
        <item> Иванов Алексей Денисович</item>
        <item> Иванов Владислав Александрович</item>
        <item> Иванова Анастасия Вячеславовна</item>
        <item> Иванова Анастасия Евгеньевна</item>
        <item> Иванова Екатерина Сергеевна</item>
        <item> Иванова Наталья Кузьминична</item>
        <item> Андреева Надежда Викторовна</item>
        <item> Бажбенов Тимур Анатольевич</item>
        <item> Васильева Екатерина Витальевна</item>
        <item> Владимирова Наталья Леонидовна</item>
        <item> Григорьева Анастасия Владиславовна</item>
        <item> Григорьева Светлана Александровна</item>
        <item> Ефремова Анастасия Александровна</item>
        <item> Ефремова Ольга Витальевна</item>
        <item> Жестянова Елизавета Валентиновна</item>
        <item> Журавлева Елена Юрьевна</item>
        <item> Журавлева Кристина Вадимовна</item>
        <item> Иванова Татьяна Валериевна</item>
        <item> Игнатьев Андрей Валерьевич</item>
        <item> Катков Виталий Станиславович</item>
        <item> Кириллов Владимир Эдуардович</item>
        <item> Леонтьев Виталий Николаевич</item>
        <item> Маркова Анна Владимировна</item>
        <item> Миронова Анастасия Владимировна</item>
        <item> Антонова Кристина Юрьевна</item>
        <item> Баринов Виталий Степанович</item>
        <item> Белов Денис Владиславович</item>
        <item> Васильев Алексей Юрьевич</item>
        <item> Григорьев Евгений Игоревич</item>
        <item> Григорьева Елена Игоревна</item>
        <item> Герасимова Марина Владиславовна</item>
        <item> Журавлёв Владимир Сергеевич</item>
        <item> Зырянова Анжелика Валерьевна</item>
        <item> Иванова Екатерина Георгиевна</item>
        <item> Иванова Татьяна Андреевна</item>
        <item> Алексеева Оксана Юрьевна</item>
        <item> Андреева Анастасия Анатольевна</item>
        <item> Антонов Евгений Николаевич</item>
        <item> Арсентьев Владимир Святославович</item>
        <item> Бажбенов Анатолий Александрович</item>
        <item> Борисов Александр Юрьевич</item>
        <item> Гурьев Олег Олегович</item>
        <item> Димитриев Димитрий Вениаминович</item>
        <item> Иванов Евгений Андреевич</item>
    </string-array>
    <string name="Pass">Список имеющих пропуск в школу</string>
    <string name="Classes">Списки классов</string>
    <string name="address">г. Всевышний Пар, ул. Грибы, д.1337</string>
    <string name="TeacherList">Список учителей</string>
    <string name="StudentsList">Список учеников</string>
    <string name="ClassList">Поиск класса</string>
    <string name="PassList">Список имеющих доступ в школу</string>
    <string name="Employees">Работники школы</string>
    <string name="Electives">Кружки</string>
    <string name="Sections">Секции</string>
    <string-array name="T">
        <item>Светлана Рудольф - учитель математики</item>
        <item>Наталья Усы - учитель химии</item>
        <item>Любовь Токоглотова - учитель русского и литературы</item>
        <item>Петр Мяч - учитель физкультуры</item>
        <item>Софья Лук - учитель географии</item>
        <item>Ольга Изъямы - учитель экономики</item>
        <item>Сергей Смирнов - учитель информатики для богов</item>
        <item>Танец Иван Саныч - учитель хореографии</item>
    </string-array>
    <string name="class1">
        <string-array name="K1">
            <item>1. Агатьева Арина Юрьевна"\n"</item>
            <item>2. Алексеева Пальмира Гурьевна"\n"</item>
            <item>3. Алексеев Феликс Александрович"\n"</item>
            <item>4. Борисова Екатерина Юрьевна"\n"</item>
            <item>5. Васильев Иван Юрьевич"\n"</item>
            <item>6. Григорьева Елена Андреевна"\n"</item>
            <item>7. Данилов Александр Леонидович"\n"</item>
            <item>8. Жидова Анастасия Анатольевна"\n"</item>
            <item>9. Исаков Константин Сергеевич"\n"</item>
            <item>10. Иванов Иван Александрович"\n"</item>
            <item>11. Клементьева Екатерина Николаевна"\n"</item>
            <item>12. Николаева Анжелика Леонидовна"\n"</item>
            <item>13. Николаева Анна Игоревна"\n"</item>
            <item>14. Николаев Кирилл Андреевич"\n"</item>
            <item>15. Родионова Елена Васильевна"\n"</item>
            <item>16. Семёнова Анна Александровна"\n"</item>
            <item>17. Терентьев Юрий Александрович"\n"</item>
            <item>18. Фёдоров Владимир Николаевич"\n"</item>
        </string-array>
    </string>
</resources>