<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="24dp"
            android:textStyle="italic"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/B1"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="#031983"
            android:text="@string/Teachers"
            android:textColor="@color/white"
            android:textSize="13dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/B2"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/Students"
            android:textSize="13dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/B3"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textSize="13dp"
            android:text="@string/Pass">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/B4"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textSize="13dp"
            android:text="@string/Employees">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/B5"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textSize="13dp"
            android:text="@string/Electives">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/B6"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textSize="13dp"
            android:text="@string/Sections">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:background="#031983"
            android:textColor="@color/white"
            android:id="@+id/Journal"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="Журнал оценок"
            android:textSize="13dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/address">
        </TextView>
    </LinearLayout>
</LinearLayout>